--- a/css/style.css
+++ b/css/style.css
@@ -8,18 +8,17 @@ body{
 	background: #EEE -ms-radial-gradient(50% 70%,cover,rgba(255, 255, 255, 0.65) 0,rgba(255, 255, 255, 0) 82%);
 	font-family: Arial;
 	min-height: 600px;
-	/*overflow: hidden;*/
+	overflow: hidden;
 	font-size: 12px;
 }
 
 
 input{
 	border: 1px solid #CCC;
-	/*padding: 5px;*/
 	outline: none;
 	border-radius: 3px;
-	/*font-size: 30px;*/
-	/*color: #888;*/
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
 }
 
 p {	font-size: 12px; }
@@ -30,7 +29,11 @@ p {	font-size: 12px; }
 	background: #FFF;
 	border: 1px solid #CCC;
 	border-radius: 3px;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
 	box-shadow: 0 1px 0px white;
+	-webkit-box-shadow: 0 1px 0px white;
+	-moz-box-shadow: 0 1px 0px white;
 }
 
 #main-container .box{
@@ -52,6 +55,8 @@ p {	font-size: 12px; }
 	background: #333;
 	border: 1px solid #CCC;
 	border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
 	vertical-align: middle;
 }
 
@@ -59,20 +64,18 @@ pre{
 	text-align: left;
 	background: #333;
 	border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
 	padding: 13px;
 	color: #DDD;
 	overflow-x: auto;
-	box-shadow: inset 0 0 30px rgba(0,0,0,0.2);
+	box-shadow: inset 0 0 30px rgba(0,0,0,0.3);
+	-webkit-box-shadow: inset 0 0 30px rgba(0,0,0,0.3);
+	-moz-box-shadow: inset 0 0 30px rgba(0,0,0,0.3);
 }
 
 #css-code{
 	height: 300px;
-}
-
-#main-container .help {
-	/*position: absolute;*/
-	right: 0;
-	top: 40px;
 }
 
 #main-container .help ul {
@@ -83,6 +86,8 @@ pre{
 #main-container .help li {
 	background-color: #539591;
 	border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
 	padding: 8px;
 	margin: 0 4px 8px;
 	width: 100px;
@@ -95,6 +100,7 @@ pre{
 	vertical-align: top;
 	color: white;
 	-webkit-transition: padding 0.2s;
+	-moz-transition: padding 0.2s;
 }
 
 #main-container .help li:after {
@@ -118,13 +124,17 @@ input.color {
 	border: 0px;
 	height: 60px;
 	border-radius: 30px;
+	-webkit-border-radius: 30px;
+	-moz-border-radius: 30px;
 	text-align: center;
 	color: white;
 	cursor: pointer;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.25);
 	-moz-box-shadow: 0 1px 3px rgba(0,0,0,0.25);
 	-webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.25);
 	border-bottom: 1px solid rgba(0, 0, 0, 0.25);
 	-webkit-transition: background-color 0.3s;
+	-moz-transition: background-color 0.3s;
 }
 
 input {
@@ -146,16 +156,19 @@ input {
 	font-weight: bold;
 	line-height: 1;
 	text-decoration: none;
-	-moz-border-radius: 5px;
+	border-radius: 5px;
 	-webkit-border-radius: 5px;
-	-moz-box-shadow: 0 1px 3px rgba(0,0,0,0.25);
+	-moz-border-radius: 5px;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.25);
 	-webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.25);
+	-moz-box-shadow: 0 1px 3px rgba(0,0,0,0.25);
 	text-shadow: 0 -1px 0px rgba(0, 0, 0, 0.25);
 	border-bottom: 1px solid rgba(0, 0, 0, 0.25);
 	cursor: pointer;
 	outline: 0;
 	border: 0;
 	-webkit-transition: background-color 0.3s;
+	-moz-transition: background-color 0.3s;
 }
 
 .button:hover {
