--- a/css/style.css
+++ b/css/style.css
@@ -189,3 +189,261 @@ input {
 	bottom: 5px;
 	right: 20px;
 }
+
+#art {
+	width: 168px;
+	height: 168px;
+	margin: 0 auto;
+}
+
+#art div{
+	width: 8px;
+	height: 8px;
+	background: transparent;
+	box-shadow: 
+	8px 64px rgb(0, 0, 0),
+	8px 56px rgb(0, 0, 0),
+	8px 72px rgb(0, 0, 0),
+	8px 80px rgb(0, 0, 0),
+	8px 88px rgb(0, 0, 0),
+	8px 96px rgb(0, 0, 0),
+	152px 56px rgb(0, 0, 0),
+	152px 64px rgb(0, 0, 0),
+	152px 72px rgb(0, 0, 0),
+	152px 80px rgb(0, 0, 0),
+	152px 96px rgb(0, 0, 0),
+	16px 56px rgb(0, 0, 0),
+	16px 48px rgb(0, 0, 0),
+	16px 40px rgb(0, 0, 0),
+	24px 40px rgb(0, 0, 0),
+	24px 32px rgb(0, 0, 0),
+	32px 32px rgb(0, 0, 0),
+	32px 24px rgb(0, 0, 0),
+	40px 24px rgb(0, 0, 0),
+	48px 24px rgb(0, 0, 0),
+	48px 16px rgb(0, 0, 0),
+	56px 16px rgb(0, 0, 0),
+	72px 16px rgb(0, 0, 0),
+	64px 16px rgb(0, 0, 0),
+	80px 16px rgb(0, 0, 0),
+	88px 16px rgb(0, 0, 0),
+	144px 56px rgb(0, 0, 0),
+	144px 48px rgb(0, 0, 0),
+	144px 40px rgb(0, 0, 0),
+	136px 40px rgb(0, 0, 0),
+	136px 32px rgb(0, 0, 0),
+	128px 32px rgb(0, 0, 0),
+	128px 24px rgb(0, 0, 0),
+	120px 24px rgb(0, 0, 0),
+	112px 24px rgb(0, 0, 0),
+	112px 16px rgb(0, 0, 0),
+	96px 16px rgb(0, 0, 0),
+	104px 16px rgb(0, 0, 0),
+	16px 96px rgb(0, 0, 0),
+	24px 96px rgb(0, 0, 0),
+	32px 96px rgb(0, 0, 0),
+	144px 96px rgb(0, 0, 0),
+	136px 96px rgb(0, 0, 0),
+	128px 96px rgb(0, 0, 0),
+	32px 88px rgb(0, 0, 0),
+	128px 88px rgb(0, 0, 0),
+	40px 88px rgb(0, 0, 0),
+	56px 88px rgb(0, 0, 0),
+	48px 88px rgb(0, 0, 0),
+	64px 88px rgb(0, 0, 0),
+	72px 88px rgb(0, 0, 0),
+	80px 88px rgb(0, 0, 0),
+	96px 88px rgb(0, 0, 0),
+	112px 88px rgb(0, 0, 0),
+	120px 88px rgb(0, 0, 0),
+	104px 88px rgb(0, 0, 0),
+	88px 88px rgb(0, 0, 0),
+	56px 96px rgb(0, 0, 0),
+	56px 104px rgb(0, 0, 0),
+	104px 96px rgb(0, 0, 0),
+	104px 104px rgb(0, 0, 0),
+	136px 104px rgb(0, 0, 0),
+	144px 104px rgb(0, 0, 0),
+	24px 104px rgb(0, 0, 0),
+	16px 104px rgb(0, 0, 0),
+	24px 112px rgb(0, 0, 0),
+	24px 120px rgb(0, 0, 0),
+	136px 112px rgb(0, 0, 0),
+	136px 120px rgb(0, 0, 0),
+	128px 120px rgb(0, 0, 0),
+	32px 120px rgb(0, 0, 0),
+	32px 128px rgb(0, 0, 0),
+	128px 128px rgb(0, 0, 0),
+	40px 128px rgb(0, 0, 0),
+	48px 128px rgb(0, 0, 0),
+	56px 128px rgb(0, 0, 0),
+	64px 128px rgb(0, 0, 0),
+	72px 128px rgb(0, 0, 0),
+	80px 128px rgb(0, 0, 0),
+	88px 128px rgb(0, 0, 0),
+	96px 128px rgb(0, 0, 0),
+	104px 128px rgb(0, 0, 0),
+	112px 128px rgb(0, 0, 0),
+	120px 128px rgb(0, 0, 0),
+	40px 104px rgb(255, 255, 255),
+	40px 112px rgb(255, 255, 255),
+	48px 96px rgb(255, 255, 255),
+	48px 104px rgb(255, 255, 255),
+	48px 112px rgb(255, 255, 255),
+	64px 112px rgb(255, 255, 255),
+	72px 112px rgb(255, 255, 255),
+	56px 112px rgb(255, 255, 255),
+	64px 104px rgb(255, 255, 255),
+	72px 104px rgb(255, 255, 255),
+	80px 104px rgb(255, 255, 255),
+	96px 104px rgb(255, 255, 255),
+	88px 104px rgb(255, 255, 255),
+	88px 112px rgb(255, 255, 255),
+	80px 112px rgb(255, 255, 255),
+	104px 112px rgb(255, 255, 255),
+	96px 112px rgb(255, 255, 255),
+	112px 112px rgb(255, 255, 255),
+	112px 104px rgb(255, 255, 255),
+	112px 96px rgb(255, 255, 255),
+	120px 104px rgb(255, 255, 255),
+	120px 112px rgb(255, 255, 255),
+	64px 72px rgb(81, 139, 65),
+	56px 72px rgb(81, 139, 65),
+	56px 64px rgb(81, 139, 65),
+	64px 64px rgb(81, 139, 65),
+	72px 64px rgb(81, 139, 65),
+	72px 72px rgb(81, 139, 65),
+	80px 72px rgb(81, 139, 65),
+	80px 64px rgb(81, 139, 65),
+	88px 64px rgb(81, 139, 65),
+	88px 72px rgb(81, 139, 65),
+	96px 72px rgb(81, 139, 65),
+	104px 72px rgb(81, 139, 65),
+	104px 64px rgb(81, 139, 65),
+	96px 64px rgb(81, 139, 65),
+	64px 56px rgb(81, 139, 65),
+	72px 56px rgb(81, 139, 65),
+	80px 56px rgb(81, 139, 65),
+	88px 56px rgb(81, 139, 65),
+	96px 56px rgb(81, 139, 65),
+	24px 72px rgb(81, 139, 65),
+	32px 64px rgb(81, 139, 65),
+	24px 64px rgb(81, 139, 65),
+	32px 56px rgb(81, 139, 65),
+	128px 56px rgb(81, 139, 65),
+	128px 64px rgb(81, 139, 65),
+	136px 64px rgb(81, 139, 65),
+	136px 72px rgb(81, 139, 65),
+	56px 32px rgb(81, 139, 65),
+	40px 40px rgb(81, 139, 65),
+	48px 40px rgb(81, 139, 65),
+	104px 32px rgb(81, 139, 65),
+	112px 40px rgb(81, 139, 65),
+	120px 40px rgb(81, 139, 65),
+	24px 80px rgb(255, 255, 255),
+	32px 72px rgb(255, 255, 255),
+	40px 72px rgb(255, 255, 255),
+	48px 72px rgb(255, 255, 255),
+	112px 72px rgb(255, 255, 255),
+	120px 72px rgb(255, 255, 255),
+	128px 72px rgb(255, 255, 255),
+	152px 88px rgba(0, 0, 0, 255),
+	136px 80px rgb(255, 255, 255),
+	112px 64px rgb(255, 255, 255),
+	120px 64px rgb(255, 255, 255),
+	40px 64px rgb(255, 255, 255),
+	48px 64px rgb(255, 255, 255),
+	32px 48px rgb(255, 255, 255),
+	40px 48px rgb(255, 255, 255),
+	40px 56px rgb(255, 255, 255),
+	48px 56px rgb(255, 255, 255),
+	56px 56px rgb(255, 255, 255),
+	128px 48px rgb(255, 255, 255),
+	112px 48px rgb(255, 255, 255),
+	104px 56px rgb(255, 255, 255),
+	112px 56px rgb(255, 255, 255),
+	120px 56px rgb(255, 255, 255),
+	120px 48px rgb(255, 255, 255),
+	48px 48px rgb(255, 255, 255),
+	56px 48px rgb(255, 255, 255),
+	72px 48px rgb(255, 255, 255),
+	64px 48px rgb(255, 255, 255),
+	56px 40px rgb(255, 255, 255),
+	64px 40px rgb(255, 255, 255),
+	64px 32px rgb(255, 255, 255),
+	96px 32px rgb(255, 255, 255),
+	104px 40px rgb(255, 255, 255),
+	104px 48px rgb(255, 255, 255),
+	96px 48px rgb(255, 255, 255),
+	96px 40px rgb(255, 255, 255),
+	72px 40px rgb(255, 255, 255),
+	72px 32px rgb(255, 255, 255),
+	80px 32px rgb(255, 255, 255),
+	80px 48px rgb(255, 255, 255),
+	88px 40px rgb(255, 255, 255),
+	80px 40px rgb(255, 255, 255),
+	88px 32px rgb(255, 255, 255),
+	88px 48px rgb(255, 255, 255),
+	40px 96px rgb(235, 235, 235),
+	32px 104px rgb(235, 235, 235),
+	32px 112px rgb(235, 235, 235),
+	40px 120px rgb(235, 235, 235),
+	120px 96px rgb(235, 235, 235),
+	128px 104px rgb(235, 235, 235),
+	128px 112px rgb(235, 235, 235),
+	48px 120px rgb(235, 235, 235),
+	56px 120px rgb(235, 235, 235),
+	64px 120px rgb(235, 235, 235),
+	72px 120px rgb(235, 235, 235),
+	88px 120px rgb(235, 235, 235),
+	80px 120px rgb(235, 235, 235),
+	104px 120px rgb(235, 235, 235),
+	96px 120px rgb(235, 235, 235),
+	112px 120px rgb(235, 235, 235),
+	120px 120px rgb(235, 235, 235),
+	16px 80px rgb(235, 235, 235),
+	16px 88px rgb(235, 235, 235),
+	24px 88px rgb(235, 235, 235),
+	32px 80px rgb(235, 235, 235),
+	40px 80px rgb(235, 235, 235),
+	48px 80px rgb(235, 235, 235),
+	56px 80px rgb(235, 235, 235),
+	104px 80px rgb(235, 235, 235),
+	120px 80px rgb(235, 235, 235),
+	112px 80px rgb(235, 235, 235),
+	128px 80px rgb(235, 235, 235),
+	136px 88px rgb(235, 235, 235),
+	144px 88px rgb(235, 235, 235),
+	144px 80px rgb(235, 235, 235),
+	64px 80px rgb(68, 117, 55),
+	72px 80px rgb(68, 117, 55),
+	80px 80px rgb(68, 117, 55),
+	88px 80px rgb(68, 117, 55),
+	96px 80px rgb(68, 117, 55),
+	144px 72px rgb(68, 117, 55),
+	144px 64px rgb(68, 117, 55),
+	16px 72px rgb(68, 117, 55),
+	16px 64px rgb(68, 117, 55),
+	24px 48px rgb(68, 117, 55),
+	24px 56px rgb(68, 117, 55),
+	40px 32px rgb(68, 117, 55),
+	48px 32px rgb(68, 117, 55),
+	56px 24px rgb(68, 117, 55),
+	104px 24px rgb(68, 117, 55),
+	112px 32px rgb(68, 117, 55),
+	120px 32px rgb(68, 117, 55),
+	136px 48px rgb(68, 117, 55),
+	136px 56px rgb(68, 117, 55),
+	128px 40px rgb(235, 235, 235),
+	96px 24px rgb(235, 235, 235),
+	64px 24px rgb(235, 235, 235),
+	72px 24px rgb(235, 235, 235),
+	80px 24px rgb(235, 235, 235),
+	88px 24px rgb(235, 235, 235),
+	32px 40px rgb(235, 235, 235),
+	64px 96px rgb(235, 235, 235),
+	72px 96px rgb(235, 235, 235),
+	80px 96px rgb(235, 235, 235),
+	88px 96px rgb(235, 235, 235),
+	96px 96px rgb(235, 235, 235);
+}
