add back button

--- a/css/common.css
+++ b/css/common.css
@@ -81,3 +81,11 @@ header .button + span{
 header .button:hover + span{
 	display: inline;
 }
+
+#back-to-lab-button {
+	position: fixed;
+	bottom: 10px;
+	right: 10px;
+	text-decoration: none;
+	font-size: 20px;
+}
