stop user-select on left panel

--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,9 @@ p {	font-size: 12px; }
 }
 
 #main-container #left { 
-	float: left; 
+	float: left;
+	-webkit-user-select: none;
+	-moz-user-select: none;
 }
 
 #main-container #right { float: right; text-align: left; } 
