copy button position change

--- a/css/style.css
+++ b/css/style.css
@@ -213,11 +213,14 @@ input {
 
 .copy-button {
 	position: absolute;
-	bottom: 5px;
-	right: 20px;
+	top: 0;
+	right: 0;
+	-webkit-border-radius: 0 5px 0 0;
+	-moz-border-radius: 0 5px 0 0;
+	border-radius: 0 5px 0 0;
+	padding: 5px;
 }
 
-#screenshot { display: none; }
 
 #art {
 	width: 168px;
