change mushroom img to hash color css

--- a/css/style.css
+++ b/css/style.css
@@ -232,268 +232,5 @@ input {
 	width: 8px;
 	height: 8px;
 	background: transparent;
-	box-shadow: 
-	8px 64px rgb(0, 0, 0),
-	8px 56px rgb(0, 0, 0),
-	8px 72px rgb(0, 0, 0),
-	8px 80px rgb(0, 0, 0),
-	8px 88px rgb(0, 0, 0),
-	8px 96px rgb(0, 0, 0),
-	152px 56px rgb(0, 0, 0),
-	152px 64px rgb(0, 0, 0),
-	152px 72px rgb(0, 0, 0),
-	152px 80px rgb(0, 0, 0),
-	152px 96px rgb(0, 0, 0),
-	16px 56px rgb(0, 0, 0),
-	16px 48px rgb(0, 0, 0),
-	16px 40px rgb(0, 0, 0),
-	24px 40px rgb(0, 0, 0),
-	24px 32px rgb(0, 0, 0),
-	32px 32px rgb(0, 0, 0),
-	32px 24px rgb(0, 0, 0),
-	40px 24px rgb(0, 0, 0),
-	48px 24px rgb(0, 0, 0),
-	48px 16px rgb(0, 0, 0),
-	56px 16px rgb(0, 0, 0),
-	72px 16px rgb(0, 0, 0),
-	64px 16px rgb(0, 0, 0),
-	80px 16px rgb(0, 0, 0),
-	88px 16px rgb(0, 0, 0),
-	144px 56px rgb(0, 0, 0),
-	144px 48px rgb(0, 0, 0),
-	144px 40px rgb(0, 0, 0),
-	136px 40px rgb(0, 0, 0),
-	136px 32px rgb(0, 0, 0),
-	128px 32px rgb(0, 0, 0),
-	128px 24px rgb(0, 0, 0),
-	120px 24px rgb(0, 0, 0),
-	112px 24px rgb(0, 0, 0),
-	112px 16px rgb(0, 0, 0),
-	96px 16px rgb(0, 0, 0),
-	104px 16px rgb(0, 0, 0),
-	16px 96px rgb(0, 0, 0),
-	24px 96px rgb(0, 0, 0),
-	32px 96px rgb(0, 0, 0),
-	144px 96px rgb(0, 0, 0),
-	136px 96px rgb(0, 0, 0),
-	128px 96px rgb(0, 0, 0),
-	32px 88px rgb(0, 0, 0),
-	128px 88px rgb(0, 0, 0),
-	40px 88px rgb(0, 0, 0),
-	56px 88px rgb(0, 0, 0),
-	48px 88px rgb(0, 0, 0),
-	64px 88px rgb(0, 0, 0),
-	72px 88px rgb(0, 0, 0),
-	80px 88px rgb(0, 0, 0),
-	96px 88px rgb(0, 0, 0),
-	112px 88px rgb(0, 0, 0),
-	120px 88px rgb(0, 0, 0),
-	104px 88px rgb(0, 0, 0),
-	88px 88px rgb(0, 0, 0),
-	56px 96px rgb(0, 0, 0),
-	56px 104px rgb(0, 0, 0),
-	104px 96px rgb(0, 0, 0),
-	104px 104px rgb(0, 0, 0),
-	136px 104px rgb(0, 0, 0),
-	144px 104px rgb(0, 0, 0),
-	24px 104px rgb(0, 0, 0),
-	16px 104px rgb(0, 0, 0),
-	24px 112px rgb(0, 0, 0),
-	24px 120px rgb(0, 0, 0),
-	136px 112px rgb(0, 0, 0),
-	136px 120px rgb(0, 0, 0),
-	128px 120px rgb(0, 0, 0),
-	32px 120px rgb(0, 0, 0),
-	32px 128px rgb(0, 0, 0),
-	128px 128px rgb(0, 0, 0),
-	40px 128px rgb(0, 0, 0),
-	48px 128px rgb(0, 0, 0),
-	56px 128px rgb(0, 0, 0),
-	64px 128px rgb(0, 0, 0),
-	72px 128px rgb(0, 0, 0),
-	80px 128px rgb(0, 0, 0),
-	88px 128px rgb(0, 0, 0),
-	96px 128px rgb(0, 0, 0),
-	104px 128px rgb(0, 0, 0),
-	112px 128px rgb(0, 0, 0),
-	120px 128px rgb(0, 0, 0),
-	40px 104px rgb(255, 255, 255),
-	40px 112px rgb(255, 255, 255),
-	48px 96px rgb(255, 255, 255),
-	48px 104px rgb(255, 255, 255),
-	48px 112px rgb(255, 255, 255),
-	64px 112px rgb(255, 255, 255),
-	72px 112px rgb(255, 255, 255),
-	56px 112px rgb(255, 255, 255),
-	64px 104px rgb(255, 255, 255),
-	72px 104px rgb(255, 255, 255),
-	80px 104px rgb(255, 255, 255),
-	96px 104px rgb(255, 255, 255),
-	88px 104px rgb(255, 255, 255),
-	88px 112px rgb(255, 255, 255),
-	80px 112px rgb(255, 255, 255),
-	104px 112px rgb(255, 255, 255),
-	96px 112px rgb(255, 255, 255),
-	112px 112px rgb(255, 255, 255),
-	112px 104px rgb(255, 255, 255),
-	112px 96px rgb(255, 255, 255),
-	120px 104px rgb(255, 255, 255),
-	120px 112px rgb(255, 255, 255),
-	64px 72px rgb(81, 139, 65),
-	56px 72px rgb(81, 139, 65),
-	56px 64px rgb(81, 139, 65),
-	64px 64px rgb(81, 139, 65),
-	72px 64px rgb(81, 139, 65),
-	72px 72px rgb(81, 139, 65),
-	80px 72px rgb(81, 139, 65),
-	80px 64px rgb(81, 139, 65),
-	88px 64px rgb(81, 139, 65),
-	88px 72px rgb(81, 139, 65),
-	96px 72px rgb(81, 139, 65),
-	104px 72px rgb(81, 139, 65),
-	104px 64px rgb(81, 139, 65),
-	96px 64px rgb(81, 139, 65),
-	64px 56px rgb(81, 139, 65),
-	72px 56px rgb(81, 139, 65),
-	80px 56px rgb(81, 139, 65),
-	88px 56px rgb(81, 139, 65),
-	96px 56px rgb(81, 139, 65),
-	24px 72px rgb(81, 139, 65),
-	32px 64px rgb(81, 139, 65),
-	24px 64px rgb(81, 139, 65),
-	32px 56px rgb(81, 139, 65),
-	128px 56px rgb(81, 139, 65),
-	128px 64px rgb(81, 139, 65),
-	136px 64px rgb(81, 139, 65),
-	136px 72px rgb(81, 139, 65),
-	56px 32px rgb(81, 139, 65),
-	40px 40px rgb(81, 139, 65),
-	48px 40px rgb(81, 139, 65),
-	104px 32px rgb(81, 139, 65),
-	112px 40px rgb(81, 139, 65),
-	120px 40px rgb(81, 139, 65),
-	24px 80px rgb(255, 255, 255),
-	32px 72px rgb(255, 255, 255),
-	40px 72px rgb(255, 255, 255),
-	48px 72px rgb(255, 255, 255),
-	112px 72px rgb(255, 255, 255),
-	120px 72px rgb(255, 255, 255),
-	128px 72px rgb(255, 255, 255),
-	152px 88px rgba(0, 0, 0, 255),
-	136px 80px rgb(255, 255, 255),
-	112px 64px rgb(255, 255, 255),
-	120px 64px rgb(255, 255, 255),
-	40px 64px rgb(255, 255, 255),
-	48px 64px rgb(255, 255, 255),
-	32px 48px rgb(255, 255, 255),
-	40px 48px rgb(255, 255, 255),
-	40px 56px rgb(255, 255, 255),
-	48px 56px rgb(255, 255, 255),
-	56px 56px rgb(255, 255, 255),
-	128px 48px rgb(255, 255, 255),
-	112px 48px rgb(255, 255, 255),
-	104px 56px rgb(255, 255, 255),
-	112px 56px rgb(255, 255, 255),
-	120px 56px rgb(255, 255, 255),
-	120px 48px rgb(255, 255, 255),
-	48px 48px rgb(255, 255, 255),
-	56px 48px rgb(255, 255, 255),
-	72px 48px rgb(255, 255, 255),
-	64px 48px rgb(255, 255, 255),
-	56px 40px rgb(255, 255, 255),
-	64px 40px rgb(255, 255, 255),
-	64px 32px rgb(255, 255, 255),
-	96px 32px rgb(255, 255, 255),
-	104px 40px rgb(255, 255, 255),
-	104px 48px rgb(255, 255, 255),
-	96px 48px rgb(255, 255, 255),
-	96px 40px rgb(255, 255, 255),
-	72px 40px rgb(255, 255, 255),
-	72px 32px rgb(255, 255, 255),
-	80px 32px rgb(255, 255, 255),
-	80px 48px rgb(255, 255, 255),
-	88px 40px rgb(255, 255, 255),
-	80px 40px rgb(255, 255, 255),
-	88px 32px rgb(255, 255, 255),
-	88px 48px rgb(255, 255, 255),
-	40px 96px rgb(235, 235, 235),
-	32px 104px rgb(235, 235, 235),
-	32px 112px rgb(235, 235, 235),
-	40px 120px rgb(235, 235, 235),
-	120px 96px rgb(235, 235, 235),
-	128px 104px rgb(235, 235, 235),
-	128px 112px rgb(235, 235, 235),
-	48px 120px rgb(235, 235, 235),
-	56px 120px rgb(235, 235, 235),
-	64px 120px rgb(235, 235, 235),
-	72px 120px rgb(235, 235, 235),
-	88px 120px rgb(235, 235, 235),
-	80px 120px rgb(235, 235, 235),
-	104px 120px rgb(235, 235, 235),
-	96px 120px rgb(235, 235, 235),
-	112px 120px rgb(235, 235, 235),
-	120px 120px rgb(235, 235, 235),
-	16px 80px rgb(235, 235, 235),
-	16px 88px rgb(235, 235, 235),
-	24px 88px rgb(235, 235, 235),
-	32px 80px rgb(235, 235, 235),
-	40px 80px rgb(235, 235, 235),
-	48px 80px rgb(235, 235, 235),
-	56px 80px rgb(235, 235, 235),
-	104px 80px rgb(235, 235, 235),
-	120px 80px rgb(235, 235, 235),
-	112px 80px rgb(235, 235, 235),
-	128px 80px rgb(235, 235, 235),
-	136px 88px rgb(235, 235, 235),
-	144px 88px rgb(235, 235, 235),
-	144px 80px rgb(235, 235, 235),
-	64px 80px rgb(68, 117, 55),
-	72px 80px rgb(68, 117, 55),
-	80px 80px rgb(68, 117, 55),
-	88px 80px rgb(68, 117, 55),
-	96px 80px rgb(68, 117, 55),
-	144px 72px rgb(68, 117, 55),
-	144px 64px rgb(68, 117, 55),
-	16px 72px rgb(68, 117, 55),
-	16px 64px rgb(68, 117, 55),
-	24px 48px rgb(68, 117, 55),
-	24px 56px rgb(68, 117, 55),
-	40px 32px rgb(68, 117, 55),
-	48px 32px rgb(68, 117, 55),
-	56px 24px rgb(68, 117, 55),
-	104px 24px rgb(68, 117, 55),
-	112px 32px rgb(68, 117, 55),
-	120px 32px rgb(68, 117, 55),
-	136px 48px rgb(68, 117, 55),
-	136px 56px rgb(68, 117, 55),
-	128px 40px rgb(235, 235, 235),
-	96px 24px rgb(235, 235, 235),
-	64px 24px rgb(235, 235, 235),
-	72px 24px rgb(235, 235, 235),
-	80px 24px rgb(235, 235, 235),
-	88px 24px rgb(235, 235, 235),
-	32px 40px rgb(235, 235, 235),
-	64px 96px rgb(235, 235, 235),
-	72px 96px rgb(235, 235, 235),
-	80px 96px rgb(235, 235, 235),
-	88px 96px rgb(235, 235, 235),
-	96px 96px rgb(235, 235, 235),
-	16px 152px rgb(242, 242, 242),
-	24px 152px rgb(242, 242, 242),
-	32px 152px rgb(242, 242, 242),
-	40px 152px rgb(242, 242, 242),
-	48px 152px rgb(242, 242, 242),
-	144px 152px rgb(242, 242, 242),
-	152px 152px rgb(242, 242, 242),
-	136px 152px rgb(242, 242, 242),
-	120px 152px rgb(242, 242, 242),
-	128px 152px rgb(242, 242, 242),
-	112px 152px rgb(242, 242, 242),
-	56px 152px rgb(242, 242, 242),
-	64px 152px rgb(242, 242, 242),
-	72px 152px rgb(242, 242, 242),
-	104px 152px rgb(242, 242, 242),
-	96px 152px rgb(242, 242, 242),
-	88px 152px rgb(242, 242, 242),
-	80px 152px rgb(242, 242, 242);
+	box-shadow:  8px 64px #000000, 8px 56px #000000, 8px 72px #000000, 8px 80px #000000, 8px 88px #000000, 8px 96px #000000, 152px 56px #000000, 152px 64px #000000, 152px 72px #000000, 152px 80px #000000, 152px 96px #000000, 16px 56px #000000, 16px 48px #000000, 16px 40px #000000, 24px 40px #000000, 24px 32px #000000, 32px 32px #000000, 32px 24px #000000, 40px 24px #000000, 48px 24px #000000, 48px 16px #000000, 56px 16px #000000, 72px 16px #000000, 64px 16px #000000, 80px 16px #000000, 88px 16px #000000, 144px 56px #000000, 144px 48px #000000, 144px 40px #000000, 136px 40px #000000, 136px 32px #000000, 128px 32px #000000, 128px 24px #000000, 120px 24px #000000, 112px 24px #000000, 112px 16px #000000, 96px 16px #000000, 104px 16px #000000, 16px 96px #000000, 24px 96px #000000, 32px 96px #000000, 144px 96px #000000, 136px 96px #000000, 128px 96px #000000, 32px 88px #000000, 128px 88px #000000, 40px 88px #000000, 56px 88px #000000, 48px 88px #000000, 64px 88px #000000, 72px 88px #000000, 80px 88px #000000, 96px 88px #000000, 112px 88px #000000, 120px 88px #000000, 104px 88px #000000, 88px 88px #000000, 56px 96px #000000, 56px 104px #000000, 104px 96px #000000, 104px 104px #000000, 136px 104px #000000, 144px 104px #000000, 24px 104px #000000, 16px 104px #000000, 24px 112px #000000, 24px 120px #000000, 136px 112px #000000, 136px 120px #000000, 128px 120px #000000, 32px 120px #000000, 32px 128px #000000, 128px 128px #000000, 40px 128px #000000, 48px 128px #000000, 56px 128px #000000, 64px 128px #000000, 72px 128px #000000, 80px 128px #000000, 88px 128px #000000, 96px 128px #000000, 104px 128px #000000, 112px 128px #000000, 120px 128px #000000, 40px 104px #ffffff, 40px 112px #ffffff, 48px 96px #ffffff, 48px 104px #ffffff, 48px 112px #ffffff, 64px 112px #ffffff, 72px 112px #ffffff, 56px 112px #ffffff, 64px 104px #ffffff, 72px 104px #ffffff, 80px 104px #ffffff, 96px 104px #ffffff, 88px 104px #ffffff, 88px 112px #ffffff, 80px 112px #ffffff, 104px 112px #ffffff, 96px 112px #ffffff, 112px 112px #ffffff, 112px 104px #ffffff, 112px 96px #ffffff, 120px 104px #ffffff, 120px 112px #ffffff, 64px 72px #518b41, 56px 72px #518b41, 56px 64px #518b41, 64px 64px #518b41, 72px 64px #518b41, 72px 72px #518b41, 80px 72px #518b41, 80px 64px #518b41, 88px 64px #518b41, 88px 72px #518b41, 96px 72px #518b41, 104px 72px #518b41, 104px 64px #518b41, 96px 64px #518b41, 64px 56px #518b41, 72px 56px #518b41, 80px 56px #518b41, 88px 56px #518b41, 96px 56px #518b41, 24px 72px #518b41, 32px 64px #518b41, 24px 64px #518b41, 32px 56px #518b41, 128px 56px #518b41, 128px 64px #518b41, 136px 64px #518b41, 136px 72px #518b41, 56px 32px #518b41, 40px 40px #518b41, 48px 40px #518b41, 104px 32px #518b41, 112px 40px #518b41, 120px 40px #518b41, 24px 80px #ffffff, 32px 72px #ffffff, 40px 72px #ffffff, 48px 72px #ffffff, 112px 72px #ffffff, 120px 72px #ffffff, 128px 72px #ffffff, 152px 88px #000000, 136px 80px #ffffff, 112px 64px #ffffff, 120px 64px #ffffff, 40px 64px #ffffff, 48px 64px #ffffff, 32px 48px #ffffff, 40px 48px #ffffff, 40px 56px #ffffff, 48px 56px #ffffff, 56px 56px #ffffff, 128px 48px #ffffff, 112px 48px #ffffff, 104px 56px #ffffff, 112px 56px #ffffff, 120px 56px #ffffff, 120px 48px #ffffff, 48px 48px #ffffff, 56px 48px #ffffff, 72px 48px #ffffff, 64px 48px #ffffff, 56px 40px #ffffff, 64px 40px #ffffff, 64px 32px #ffffff, 96px 32px #ffffff, 104px 40px #ffffff, 104px 48px #ffffff, 96px 48px #ffffff, 96px 40px #ffffff, 72px 40px #ffffff, 72px 32px #ffffff, 80px 32px #ffffff, 80px 48px #ffffff, 88px 40px #ffffff, 80px 40px #ffffff, 88px 32px #ffffff, 88px 48px #ffffff, 40px 96px #ebebeb, 32px 104px #ebebeb, 32px 112px #ebebeb, 40px 120px #ebebeb, 120px 96px #ebebeb, 128px 104px #ebebeb, 128px 112px #ebebeb, 48px 120px #ebebeb, 56px 120px #ebebeb, 64px 120px #ebebeb, 72px 120px #ebebeb, 88px 120px #ebebeb, 80px 120px #ebebeb, 104px 120px #ebebeb, 96px 120px #ebebeb, 112px 120px #ebebeb, 120px 120px #ebebeb, 16px 80px #ebebeb, 16px 88px #ebebeb, 24px 88px #ebebeb, 32px 80px #ebebeb, 40px 80px #ebebeb, 48px 80px #ebebeb, 56px 80px #ebebeb, 104px 80px #ebebeb, 120px 80px #ebebeb, 112px 80px #ebebeb, 128px 80px #ebebeb, 136px 88px #ebebeb, 144px 88px #ebebeb, 144px 80px #ebebeb, 64px 80px #447537, 72px 80px #447537, 80px 80px #447537, 88px 80px #447537, 96px 80px #447537, 144px 72px #447537, 144px 64px #447537, 16px 72px #447537, 16px 64px #447537, 24px 48px #447537, 24px 56px #447537, 40px 32px #447537, 48px 32px #447537, 56px 24px #447537, 104px 24px #447537, 112px 32px #447537, 120px 32px #447537, 136px 48px #447537, 136px 56px #447537, 128px 40px #ebebeb, 96px 24px #ebebeb, 64px 24px #ebebeb, 72px 24px #ebebeb, 80px 24px #ebebeb, 88px 24px #ebebeb, 32px 40px #ebebeb, 64px 96px #ebebeb, 72px 96px #ebebeb, 80px 96px #ebebeb, 88px 96px #ebebeb, 96px 96px #ebebeb, 16px 152px #f2f2f2, 24px 152px #f2f2f2, 32px 152px #f2f2f2, 40px 152px #f2f2f2, 48px 152px #f2f2f2, 144px 152px #f2f2f2, 152px 152px #f2f2f2, 136px 152px #f2f2f2, 120px 152px #f2f2f2, 128px 152px #f2f2f2, 112px 152px #f2f2f2, 56px 152px #f2f2f2, 64px 152px #f2f2f2, 72px 152px #f2f2f2, 104px 152px #f2f2f2, 96px 152px #f2f2f2, 88px 152px #f2f2f2, 80px 152px #f2f2f2;
 }
