--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,14 @@
 	display: none;
 }
 
+.flex {
+	display: flex;
+}
+
+.ai-c {
+	align-items: center;
+}
+
 .clear {
 	clear: both;
 }
@@ -10,13 +18,18 @@
 	text-align: right;
 }
 
+.d-b {
+	display: block;
+}
+
+.w-100\% {
+	width: 100%;
+}
+
 body {
 	background: #EEE -webkit-radial-gradient(50% 70%, cover, rgba(255, 255, 255, 0.65) 0, rgba(255, 255, 255, 0) 82%);
-	background: #EEE -moz-radial-gradient(50% 70%, cover, rgba(255, 255, 255, 0.65) 0, rgba(255, 255, 255, 0) 82%);
-	background: #EEE -o-radial-gradient(50% 70%, cover, rgba(255, 255, 255, 0.65) 0, rgba(255, 255, 255, 0) 82%);
-	background: #EEE -ms-radial-gradient(50% 70%, cover, rgba(255, 255, 255, 0.65) 0, rgba(255, 255, 255, 0) 82%);
-	font-family: Arial;
-	min-height: 600px;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	min-height: 95vh;
 	overflow-x: hidden;
 	font-size: 16px;
 }
@@ -30,9 +43,22 @@ p {
 	font-size: 1rem;
 }
 
+.left-sidebar,
+.right-sidebar {
+	padding: 2rem;
+}
+
+.left-sidebar {
+	width: 250px;
+}
+
+.right-sidebar {
+	width: 400px;
+}
+
 #main-container {
-	width: 900px;
-	margin: 0 auto;
+	flex: 1;
+	text-align: center;
 	background: #FFF;
 	border: 1px solid #CCC;
 	border-radius: 3px;
@@ -42,7 +68,7 @@ p {
 #top-container,
 #bottom-container {
 	width: 900px;
-	margin: 5px auto;
+	margin: 1rem auto;
 	color: #888;
 }
 
@@ -50,22 +76,12 @@ p {
 	text-align: center;
 }
 
-#main-container .box {
-	width: 450px;
-	text-align: center;
-	padding: 40px;
-	position: relative;
-	box-sizing: border-box;
-}
-
 #main-container #left {
-	float: left;
 	-webkit-user-select: none;
 	-moz-user-select: none;
 }
 
 #main-container #right {
-	float: right;
 	text-align: left;
 }
 
@@ -90,12 +106,11 @@ p {
 
 pre {
 	text-align: left;
-	background: #333;
+	background: #fff;
 	border-radius: 5px;
-	padding: 13px;
-	color: #DDD;
+	padding: 1rem;
 	overflow-x: auto;
-	box-shadow: inset 0 0 30px rgba(0, 0, 0, 0.3);
+	box-shadow: inset 0 0 30px rgba(0, 0, 0, 0.2);
 }
 
 #css-code {
@@ -105,23 +120,19 @@ pre {
 #main-container .help ul {
 	list-style: none;
 	padding: 0;
+	display: flex;
+	justify-content: center;
 }
 
 #main-container .help li {
 	background-color: transparent;
 	color: #333;
 	border-radius: 5px;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	padding: 8px;
+	padding: 8px 16px;
 	margin: 0 4px 8px;
-	width: 100px;
 	height: 65px;
 	display: inline-block;
 	position: relative;
-	box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	font-size: 14px;
 	vertical-align: top;
 	transition: all 0.2s;
 }
@@ -149,14 +160,6 @@ pre {
 	border-top-color: #333;
 }
 
-#main-container .help li:nth-child(1) {
-	/* transform: rotate(-45deg); */
-}
-
-#main-container .help li:nth-child(3) {
-	/* transform: rotate(45deg); */
-}
-
 input.color {
 	width: 60px;
 	border: 0px;
@@ -182,21 +185,27 @@ input {
 }
 
 .button {
-	background-color: #206b75;
 	display: inline-block;
 	padding: 8px 16px 8px;
-	margin: 0;
+	margin: 8px;
 	color: white !important;
 	font-size: 1rem;
 	line-height: 1;
 	text-decoration: none;
 	border-radius: 5px;
-	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25);
-	text-shadow: 0 -1px 0px rgba(0, 0, 0, 0.25);
-	border-bottom: 1px solid rgba(0, 0, 0, 0.25);
+	text-shadow: 0 -1px 0px rgba(0, 0, 0, 0.3);
 	cursor: pointer;
 	border: 0;
 	transition: background-color 0.3s;
+	border: 1px solid transparent;
+	border-color: #2d7e45;
+	background: linear-gradient(to bottom, #85b976 0%, #518b41 100%);
+	box-shadow: inset 0 1px #eceff1, 0 2px 3px rgba(0, 0, 0, 0.2);
+	padding: 8px 16px;
+}
+
+.button--full {
+	width: 100%;
 }
 
 .button:hover {
