--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ p {
 }
 
 .right-sidebar {
-	width: 400px;
+	width: 300px;
 }
 
 #main-container {
@@ -173,11 +173,12 @@ pre {
 }
 
 input.color {
-	width: 60px;
+	width: 100px;
 	border: 0px;
-	height: 60px;
+	padding: 15px;
 	border-radius: 30px;
 	text-align: center;
+	font-size: inherit;
 	color: white;
 	cursor: pointer;
 	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25);
@@ -230,6 +231,18 @@ input {
 
 .code-container {
 	position: relative;
+}
+
+.panel {
+	margin-bottom: 1rem;
+}
+
+.palette-color {
+	width: 20px;
+	height: 20px;
+	border: 1px solid rgba(0, 0, 0, 0.2);
+	border-radius: 2px;
+	margin: 4px;
 }
 
 .copy-button {
